# cyphal_GY91

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  README.md  STM32G4_GY91_Cyphal.ioc  STM32G4_GY91_Cyphal.launch
App/: communication.cpp  communication.h  main.cpp
Core/Inc/: Adafruit_BNO055.h  Adafruit_Sensor.h  IMU.h  MPU9250.h  main.h  ruka_joints.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: Adafruit_BNO055.cpp  IMU.cpp  fdcan.c  gpio.c  i2c.c  iwdg.c  main.c  main_impl.cpp  stm32g4xx_it.c
Debug/: STM32G4_GY91_Cyphal.elf  STM32G4_GY91_Cyphal.list  STM32G4_GY91_Cyphal.map  STM32G4_Stepper_Cyphal.list  STM32G4_Stepper_Cyphal.map  makefile  objects.list  sources.mk
Debug/Core/Src/: Adafruit_BNO055.cyclo  Adafruit_BNO055.d  Adafruit_BNO055.su  IMU.cyclo  IMU.d  IMU.su  MPU6050.cyclo  MPU6050.d  MPU6050.su  dma.d  fdcan.d  gpio.d  i2c.cyclo  i2c.d  i2c.su  iwdg.d  main.cyclo  main.d  main.su  main_impl.cyclo  main_impl.d  main_impl.su  stm32g4xx_hal_msp.d  stm32g4xx_it.cyclo  stm32g4xx_it.d  stm32g4xx_it.su  subdir.mk  system_stm32g4xx.d  usart.d
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32G4xx_HAL_Driver/Src/: stm32g4xx_hal.d  stm32g4xx_hal_cortex.d  stm32g4xx_hal_dma.d  stm32g4xx_hal_dma_ex.d  stm32g4xx_hal_exti.d  stm32g4xx_hal_fdcan.d  stm32g4xx_hal_flash.d  stm32g4xx_hal_flash_ex.d  stm32g4xx_hal_flash_ramfunc.d  stm32g4xx_hal_gpio.d  stm32g4xx_hal_i2c.d  stm32g4xx_hal_i2c_ex.d  stm32g4xx_hal_iwdg.cyclo  stm32g4xx_hal_iwdg.d  stm32g4xx_hal_iwdg.su  stm32g4xx_hal_pwr.d  stm32g4xx_hal_pwr_ex.d  stm32g4xx_hal_rcc.d  stm32g4xx_hal_rcc_ex.d  stm32g4xx_hal_tim.d  stm32g4xx_hal_tim_ex.d  stm32g4xx_hal_uart.d  stm32g4xx_hal_uart_ex.d  subdir.mk
Debug/Drivers/libcyphal/cyphal/: cyphal.cyclo  cyphal.d  cyphal.su  definitions.d  subdir.mk
Debug/Drivers/libcyphal/cyphal/allocators/o1/: o1_allocator.cyclo  o1_allocator.d  o1_allocator.su  subdir.mk
Debug/Drivers/libcyphal/cyphal/allocators/sys/: subdir.mk  sys_allocator.cyclo  sys_allocator.d  sys_allocator.su
Debug/Drivers/libcyphal/cyphal/providers/: FDCAN_generic.d  G4CAN.cyclo  G4CAN.d  G4CAN.su  LinuxCAN.d  provider.cyclo  provider.d  provider.su  subdir.mk
Debug/Drivers/libcyphal/libs/libcanard/: subdir.mk
Debug/Drivers/libcyphal/libs/o1heap/: subdir.mk
Drivers/libcyphal/cyphal/: cyphal.cpp  cyphal.h  definitions.cpp  definitions.h
Drivers/libcyphal/cyphal/allocators/: allocator.h
Drivers/libcyphal/cyphal/allocators/o1/: o1_allocator.cpp  o1_allocator.h
Drivers/libcyphal/cyphal/allocators/sys/: sys_allocator.cpp  sys_allocator.h
Drivers/libcyphal/cyphal/providers/: FDCAN_generic.cpp  FDCAN_generic.h  G4CAN.cpp  G4CAN.h  LinuxCAN.cpp  LinuxCAN.h  provider.cpp  provider.h
Drivers/libcyphal/cyphal/subscriptions/: subscription.h
Drivers/libcyphal/libs/libcanard/: canard.c  cavl.h
Drivers/libcyphal/libs/o1heap/: o1heap.c
Drivers/libcyphal/libs/reg/udral/physics/acoustics/: Note_0_1.h
Drivers/libcyphal/libs/reg/udral/physics/electricity/: PowerTs_0_1.h  Power_0_1.h  SourceTs_0_1.h  Source_0_1.h
Drivers/libcyphal/libs/uavcan/_register/: Access_1_0.h  List_1_0.h  Value_1_0.h
Drivers/libcyphal/libs/uavcan/diagnostic/: Record_1_0.h  Record_1_1.h
Drivers/libcyphal/libs/uavcan/file/: GetInfo_0_1.h  GetInfo_0_2.h  List_0_1.h  List_0_2.h  Modify_1_0.h  Modify_1_1.h  Read_1_0.h  Read_1_1.h  Write_1_0.h  Write_1_1.h
Drivers/libcyphal/libs/uavcan/metatransport/can/: ArbitrationID_0_1.h  DataClassic_0_1.h  DataFD_0_1.h  Frame_0_1.h  Frame_0_2.h  Manifestation_0_1.h  RTR_0_1.h
Drivers/libcyphal/libs/uavcan/metatransport/ethernet/: Frame_0_1.h
Drivers/libcyphal/libs/uavcan/metatransport/serial/: Fragment_0_1.h
Drivers/libcyphal/libs/uavcan/metatransport/udp/: Frame_0_1.h
Drivers/libcyphal/libs/uavcan/node/: GetInfo_1_0.h  GetTransportStatistics_0_1.h  Heartbeat_1_0.h
Drivers/libcyphal/libs/uavcan/node/port/: ID_1_0.h  List_0_1.h  SubjectIDList_0_1.h
Drivers/libcyphal/libs/uavcan/pnp/: NodeIDAllocationData_1_0.h  NodeIDAllocationData_2_0.h
Drivers/libcyphal/libs/uavcan/pnp/cluster/: AppendEntries_1_0.h  Discovery_1_0.h  Entry_1_0.h
Drivers/libcyphal/libs/uavcan/time/: GetSynchronizationMasterInfo_0_1.h
Drivers/libcyphal/src/: cyphal.cpp  cyphal.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
scripts/: flash_openocd.sh
(+64 files in other folders)
