cmake_minimum_required(VERSION 3.22)

get_filename_component(DEFAULT_FIRMWARE_PROJECT_NAME "${CMAKE_CURRENT_SOURCE_DIR}" NAME)

set(FIRMWARE_PROJECT_NAME "${DEFAULT_FIRMWARE_PROJECT_NAME}" CACHE STRING "Firmware project name")
set(FIRMWARE_TOOLCHAIN_FILE "cmake/gcc-arm-none-eabi.cmake" CACHE STRING "Relative path to the toolchain file")
set(FIRMWARE_STM32CUBEMX_DIR "cmake/stm32cubemx" CACHE STRING "Relative path to the STM32CubeMX CMake directory")
set(FIRMWARE_APP_DIR "App" CACHE STRING "Relative path to application sources")
set(FIRMWARE_CORE_SRC_DIR "Core/Src" CACHE STRING "Relative path to CubeMX sources")
set(FIRMWARE_LIBCXXCANARD_DIR "Drivers/libcxxcanard" CACHE STRING "Relative path to libcxxcanard sources")
set(FIRMWARE_CMSIS_DSP_INCLUDE_DIR "Drivers/CMSIS/DSP/Include" CACHE STRING "Relative path to CMSIS DSP headers")
set(FIRMWARE_CMSIS_DSP_LIBRARY_DIR "Drivers/CMSIS/DSP/Lib/GCC" CACHE STRING "Relative path to CMSIS DSP libraries")

set(DEFAULT_FIRMWARE_COMPILE_DEFINITIONS "USE_HAL_DRIVER;STM32G474xx;STM32_G;ARM_MATH_CM4")
set(FIRMWARE_COMPILE_DEFINITIONS "${DEFAULT_FIRMWARE_COMPILE_DEFINITIONS}" CACHE STRING "Project compile definitions")

get_filename_component(DEFAULT_STM32CUBEMX_TARGET_NAME "${FIRMWARE_STM32CUBEMX_DIR}" NAME)
set(STM32CUBEMX_TARGET_NAME "${DEFAULT_STM32CUBEMX_TARGET_NAME}" CACHE STRING "STM32CubeMX interface target name")

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
    set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_LIST_DIR}/${FIRMWARE_TOOLCHAIN_FILE}" CACHE FILEPATH "Toolchain file")
endif()

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)

if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS Debug Release RelWithDebInfo MinSizeRel)
endif()

project(${FIRMWARE_PROJECT_NAME} LANGUAGES C CXX ASM)
message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

add_executable(${PROJECT_NAME})

file(GLOB_RECURSE APP_SOURCES CONFIGURE_DEPENDS
    "${FIRMWARE_APP_DIR}/*.cpp"
)
file(GLOB_RECURSE USER_SOURCES CONFIGURE_DEPENDS
    "${FIRMWARE_CORE_SRC_DIR}/*.cpp"
)

file(GLOB_RECURSE LIBCXXCANARD_SOURCES CONFIGURE_DEPENDS
    "${FIRMWARE_LIBCXXCANARD_DIR}/cyphal/*.cpp"
    "${FIRMWARE_LIBCXXCANARD_DIR}/libs/*.c"
)

if(NOT DEFINED FIRMWARE_CMSIS_DSP_LIBRARY_FILE)
    set(FIRMWARE_CMSIS_DSP_LIBRARY_FILE "libarm_cortexM4lf_math.a" CACHE STRING "CMSIS DSP static library file name")
endif()

set(_FIRMWARE_CMSIS_DSP_LIBRARY_ABS_PATH
    "${CMAKE_CURRENT_LIST_DIR}/${FIRMWARE_CMSIS_DSP_LIBRARY_DIR}/${FIRMWARE_CMSIS_DSP_LIBRARY_FILE}"
)
if(NOT EXISTS "${_FIRMWARE_CMSIS_DSP_LIBRARY_ABS_PATH}")
    set(FIRMWARE_CMSIS_DSP_LIBRARY_DIR "Drivers/CMSIS/DSP/Lib/GCC" CACHE STRING "Relative path to CMSIS DSP libraries" FORCE)
    set(_FIRMWARE_CMSIS_DSP_LIBRARY_ABS_PATH
        "${CMAKE_CURRENT_LIST_DIR}/${FIRMWARE_CMSIS_DSP_LIBRARY_DIR}/${FIRMWARE_CMSIS_DSP_LIBRARY_FILE}"
    )
endif()

set(FIRMWARE_CMSIS_DSP_LIBRARY_PATH "${_FIRMWARE_CMSIS_DSP_LIBRARY_ABS_PATH}")
if(NOT EXISTS "${FIRMWARE_CMSIS_DSP_LIBRARY_PATH}")
    message(FATAL_ERROR "CMSIS DSP library not found: ${FIRMWARE_CMSIS_DSP_LIBRARY_PATH}")
endif()

add_library(cmsis_dsp_math STATIC IMPORTED GLOBAL)
set_target_properties(cmsis_dsp_math PROPERTIES
    IMPORTED_LOCATION "${FIRMWARE_CMSIS_DSP_LIBRARY_PATH}"
)

add_subdirectory("${FIRMWARE_STM32CUBEMX_DIR}")

target_sources(${PROJECT_NAME} PRIVATE
    ${APP_SOURCES}
    ${USER_SOURCES}
    ${LIBCXXCANARD_SOURCES}
)

target_include_directories(${PROJECT_NAME} PRIVATE
    "${FIRMWARE_APP_DIR}"
    "${FIRMWARE_CORE_SRC_DIR}"
    "Core/Inc"
    "${FIRMWARE_LIBCXXCANARD_DIR}"
    "${FIRMWARE_LIBCXXCANARD_DIR}/libs"
    "Drivers/STM32G4xx_HAL_Driver/Inc"
    "Drivers/STM32G4xx_HAL_Driver/Inc/Legacy"
    "Drivers/CMSIS/Device/ST/STM32G4xx/Include"
    "Drivers/CMSIS/Core/Include"
    "${FIRMWARE_CMSIS_DSP_INCLUDE_DIR}"
)

target_compile_definitions(${PROJECT_NAME} PRIVATE
    ${FIRMWARE_COMPILE_DEFINITIONS}
)

target_link_libraries(${PROJECT_NAME} PRIVATE
    ${STM32CUBEMX_TARGET_NAME}
    cmsis_dsp_math
)
